<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_change_presence"
        android:icon="@drawable/ic_announcement_white_24dp"
        app:showAsAction="always"
        android:title="@string/edit_status_message"
        android:visible="false"/>

    <item
        android:id="@+id/action_share"
        android:icon="?attr/icon_share"
        app:showAsAction="always"
        android:title="@string/share_uri_with"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/action_share_uri"
                android:title="@string/share_as_uri"/>
            <item
                android:id="@+id/action_share_http"
                android:title="@string/share_as_http"/>
            <item
                android:id="@+id/action_share_barcode"
                android:title="@string/share_as_barcode"/>
            <item
                android:id="@+id/action_show_qr_code"
                android:title="@string/show_qr_code"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_show_block_list"
        app:showAsAction="never"
        android:title="@string/show_block_list"
        android:visible="false"/>

    <item
        android:id="@+id/action_renew_certificate"
        app:showAsAction="never"
        android:title="@string/action_renew_certificate"
        android:visible="false"/>

    <item
        android:id="@+id/action_server_info_show_more"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="never"
        android:title="@string/server_info_show_more"
        android:visible="false"
        />

    <item
        android:id="@+id/action_mam_prefs"
        android:title="@string/mam_prefs"
        android:visible="false"/>

    <item
        android:icon="@drawable/ic_more_white"
        android:title=""
        android:id="@+id/more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_change_password_on_server"
                android:title="@string/change_password"
                android:icon="@drawable/ic_edit_gray"
                app:showAsAction="never"/>


            <item
                android:id="@+id/mgmt_account_enable"
                android:title="@string/mgmt_account_enable"
                android:icon="@drawable/lock_slash"/>

            <item
                android:id="@+id/mgmt_account_disable"
                android:title="@string/mgmt_account_disable"
                android:icon="@drawable/lock_slash"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"
                android:icon="@drawable/ic_setting_gray"
                app:showAsAction="never"/>
            <item
                android:id="@+id/mgmt_account_delete"
                android:title="@string/mgmt_account_delete"
                android:icon="@drawable/logout"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>