<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_ongoing_call"
        android:icon="?attr/icon_ongoing_call"
        android:orderInCategory="9"
        android:title="@string/return_to_ongoing_call"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_call"
        android:icon="?attr/icon_call"
        android:orderInCategory="10"
        android:title="@string/make_call"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_audio_call"
                android:icon="@drawable/ic_call_gray"
                android:title="@string/audio_call" />
            <item
                android:id="@+id/action_video_call"
                android:icon="@drawable/ic_video_call_gray"
                android:title="@string/video_call" />
        </menu>
    </item>
    <item
        android:id="@+id/action_security"
        android:icon="@drawable/ic_lock_white"
        android:orderInCategory="20"
        android:title="@string/encrypted_with_omemo"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/encryption_choice_none"
                    android:title="@string/encryption_choice_unencrypted" />
                <item
                    android:id="@+id/encryption_choice_axolotl"
                    android:title="@string/encryption_choice_omemo" />
                <item
                    android:id="@+id/encryption_choice_pgp"
                    android:title="@string/encryption_choice_pgp" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_attach_file"
        android:icon="@drawable/ic_attachment_white"
        android:orderInCategory="30"
        android:title="@string/attach_file"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/attach_choose_file"
                android:icon="?attr/ic_attach_document"
                android:title="@string/choose_file" />

            <item
                android:id="@+id/attach_choose_picture"
                android:icon="?attr/ic_attach_photo"
                android:title="@string/attach_choose_picture" />

            <item
                android:id="@+id/attach_take_picture"
                android:icon="?attr/ic_attach_camera"
                android:title="@string/attach_take_picture" />

            <item
                android:id="@+id/attach_record_video"
                android:icon="?attr/ic_attach_videocam"
                android:title="@string/attach_record_video" />

            <item
                android:id="@+id/attach_record_voice"
                android:icon="?attr/ic_attach_record"
                android:title="@string/attach_record_voice" />

            <item
                android:id="@+id/attach_location"
                android:icon="?attr/ic_attach_location"
                android:title="@string/send_location" />
        </menu>
    </item>
   <item
       android:id="@+id/sub_menu"
       android:title=""
       android:icon="@drawable/ic_more_white"
       app:showAsAction="always"
       android:orderInCategory="31">
       <menu>
           <item
               android:id="@+id/action_contact_details"
               android:title="@string/action_contact_details"
               android:icon="@drawable/ic_frame_gray"/>
           <item
               android:id="@+id/action_muc_details"
               android:icon="@drawable/ic_people_gray"
               android:title="@string/action_muc_details"/>
           <item
               android:id="@+id/action_invite"
               android:icon="@drawable/profile_add"
               android:title="@string/invite_contact" />
           <item
               android:id="@+id/action_search"
               android:icon="@drawable/search_normal"
               android:title="@string/search_messages"
               android:visible="@bool/show_individual_search_options"/>
           <item
               android:id="@+id/action_clear_history"
               android:icon="@drawable/trash"
               android:title="@string/action_clear_history"/>
           <item
               android:id="@+id/action_archive"
               android:icon="@drawable/close_square"
               android:title="@string/action_end_conversation"/>
           <!--    <item-->
           <!--        android:orderInCategory="70"-->
           <!--        android:title="@string/more_options">-->
           <!--        <menu>-->
           <!--            <item-->
           <!--                android:id="@+id/action_mute"-->
           <!--                android:orderInCategory="71"-->
           <!--                android:title="@string/disable_notifications"-->
           <!--                app:showAsAction="never" />-->
           <!--            <item-->
           <!--                android:id="@+id/action_unmute"-->
           <!--                android:orderInCategory="72"-->
           <!--                android:title="@string/enable_notifications"-->
           <!--                app:showAsAction="never" />-->

           <!--            <item-->
           <!--                android:id="@+id/action_toggle_pinned"-->
           <!--                android:orderInCategory="73"-->
           <!--                android:title="@string/add_to_favorites"-->
           <!--                app:showAsAction="never" />-->
           <!--        </menu>-->
           <!--    </item>-->
           <item
               android:id="@+id/action_mute"
               android:icon="@drawable/notification"
               android:title="@string/disable_notifications"/>
           <item
               android:id="@+id/action_unmute"
               android:icon="@drawable/notification"
               android:title="@string/enable_notifications" />

           <item
               android:id="@+id/action_toggle_pinned"
               android:icon="@drawable/pin"
               android:title="@string/add_to_favorites"/>
       </menu>
   </item>

    <item
        android:id="@+id/action_mute1"
        android:orderInCategory="71"
        android:title="@string/disable_notifications"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_unmute1"
        android:orderInCategory="72"
        android:title="@string/enable_notifications"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_toggle_pinned1"
        android:orderInCategory="73"
        android:title="@string/add_to_favorites"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_clear_history1"
        android:orderInCategory="50"
        android:title="@string/action_clear_history"
        app:showAsAction="never"
        android:visible="false"/>
</menu>