<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="312dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:elevation="8dp"
    android:background="@drawable/rounded_corner_dialog"
    android:gravity="center_vertical"
    android:paddingVertical="@dimen/dialog_padding_vertical"
    android:paddingHorizontal="@dimen/card_padding_regular">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/clear_histor_msg"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:textColor="@color/txt_color1"
        android:textFontWeight="500"/>

    <CheckBox
        android:id="@+id/end_conversation_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/also_end_conversation"
        android:button="@drawable/checkbox_toggle_drawable"
        android:paddingLeft="8dp"
        android:fontFamily="@font/roboto"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:textColor="@color/txt_color2"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.Conversations.Button.Borderless"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_button_gray"
            android:text="@string/cancel"
            android:textColor="@color/txt_color1"
            android:layout_marginRight="11dp"
            android:fontFamily="@font/roboto_medium"
            android:textAllCaps="false"
            android:textFontWeight="500"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/confirm_button"
            style="@style/Widget.Conversations.Button.Borderless"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_button_blue"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:fontFamily="@font/roboto_medium"
            android:textAllCaps="false"
            android:textFontWeight="500"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>